fixed article bleeding into feature container

--- a/app/scss/components/article.scss
+++ b/app/scss/components/article.scss
@@ -1,22 +1,31 @@
 @use '../util/' as *;
 
 .article{
+    background-color: var(--lightturquoise);
     width: inherit;
-    display: flex;
-    background-color: green;
+       @include breakpoint(large){
+        display: flex;
+        background-color: var(--white);
+    }
+
     &__image{
-        flex: 3;
         background-position: center center;
         background-size: cover;
         background-repeat: no-repeat;
-        height: 20rem;
-        width: 20rem;
-        @include breakpoint(medium){
-
+        width:inherit;
+        height: 40rem;
+        
+        @include breakpoint(large){
+            height: 20rem;
+            width: 20rem;
+            flex: 3;
         }
     }
     &__text{
         flex: 2; 
+        @include breakpoint-down(medium){
+            padding: 2rem;
+        }
         &__title{
             padding-bottom: 2rem;
         }
